<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">集中器</string>
    <string name="hello_world">Hello world!</string>
    <string name="battery_conter">集中器</string>
    <string name="concentrator">集中器</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_conter_main">ConterMainActivity</string>
    <string name="host_number">主机号：</string>
    <string name="salve_number">从机数：</string>
    <string name="confirm">确定</string>
    <string name="title_activity_concentrator">ConcentratorActivity</string>
    <string name="concentr_et">请输入主机号</string>
    <string name="concentr_ets">请输入从机数</string>
    <string name="total_voltage">总电压：</string>
    <string name="total_current">总电流：</string>
    <string name="group">组号：</string>
    <string name="up">上一页</string>
    <string name="down">下一页</string>
    <string name="time">时间：</string>
     <string name="pcs">PCS</string>
    <string name="StoredEnergy">储能实时信息</string>
    <string name="title_activity_stored_energyactivity_main">MainActivity</string>
    <string name="string1">运行状态</string>
    <string name="string2">累计输入总电量</string>
    <string name="string3">kWh</string>
    <string name="string4">当前电价</string>
    <string name="string5">累计输入总电费</string>
    <string name="string5s">累计输出总电费</string>
    <string name="string6">元</string>
    <string name="string7">输入功率</string>
    <string name="string8">kW</string>
    <string name="string9">累计输入总电量</string>
      <string name="string9s">累计输出总电量</string>
    <string name="string10">kWh</string>
    <string name="string11">输出功率</string>
    <string name="string15">电池电压</string>
    <string name="string16">V</string>
    <string name="string17">累计收益</string>
    <string name="string19">电池电流</string>
    <string name="string20">A</string>
    <!-- 电池数据 BATA -->
    <string name="string21">电池数据</string>
    <string name="string22">电压(V)</string>
    <string name="string23">充电电流(A)</string>
    <string name="string24">温度(℃)</string>
    <string name="string25">状态</string>
    <string name="string73">电池运行状态</string>
    <string name="string74">电池性能状态</string>
    <string name="string75">电池持续放电时间</string>
    <string name="string76">电池剩余供电时间</string>
    <string name="string77">电池剩余容量</string>
    <string name="string78">放电电流</string>
    <!-- 市电输入 MIAN -->
    <string name="string26">相电压(V)</string>
    <string name="string27">频率(Hz)</string>
    <string name="string28">U相</string>
    <string name="string29">V相</string>
    <string name="string30">W相</string>
    <string name="string69">电流(A)</string>
    <string name="string70">有功功率(P)</string>
    <string name="string71">视在功率(P)</string>
    <string name="string72">功率因数</string>
    
    <string name="string31">负载(%)</string>
    <string name="string32">P(kW)</string>
    <string name="string33">S(kVA)</string>
    <string name="string34">PF值</string>
    <string name="string35">相电流(A)</string>
    <string name="string36">直通</string>
    <string name="string37">充电</string>
    <string name="string38">放电</string>
    <!-- PCS工作状态 -->
    <string name="string39">单并机状态</string>
    <string name="string40">输入相序</string>
    <string name="string41">旁路状态</string>
    <string name="string42">整流器状态</string>
    <string name="string43">逆变器开关状态</string>
    <string name="string44">逆变器运行状态</string>
    <string name="string45">UPS温度状态</string>
    <string name="string46">电池极性状态</string>
    <string name="string47">风机状态</string>
    <string name="string48">并机线状态</string>
    <string name="string49">保险丝状态</string>
    <string name="string50">UPS通讯故障</string>
    <string name="string51">电池状态</string>
    <string name="string52">负载状态</string>
    <string name="string53">输出状态</string>
    <string name="string54">机内温度</string>
    <!-- PCS状态判断 -->
    <string name="string55">并机</string>
    <string name="string56">单机</string>
    <string name="string57">正常</string>
    <string name="string58">异常</string>
    <string name="string59">欠压</string>
    <string name="string60">过压</string>
    <string name="string61">故障</string>
    <string name="string62">告警</string>
    <string name="string63">过载</string>
    <string name="string64">旁路</string>
    <string name="string65">逆变</string>
    <string name="string66">峰</string>
    <string name="string67">平</string>
    <string name="string68">谷</string>
    
    <string name="string79">电池总组数(必填)</string>
    <string name="string80">组1电池数</string>
    <string name="string81">电池组电压高限报警值</string>
    <string name="string82">电池组电压低限报警值</string>
    <string name="string83">电池组电压高限保护值</string>
    <string name="string84">电池组电压低限保护值</string>
    <string name="string85">放电电流高限报警值</string>
    <string name="string86">放电电流高限报警值</string>
    <string name="string87">充电电流高限报警值</string>
    <string name="string88">充电电流保护保护值</string>
    <string name="string89">电池温度高限报警值</string>
    <string name="string90">电池温度高限保护值</string>
    <string name="string91">电池单体电压高限报警值</string>
    <string name="string92">电池单体电压低限报警值</string>
    <string name="string93">电池单体电压高限保护值</string>
    <string name="string94">电池单体电压低限保护值</string>
    <string name="string95">V</string>
    <string name="string96">A</string>
    <string name="string97">℃</string>
    <string name="string100">保存成功</string>
    
    <string name="load_title">系统输出</string>
    <string name="state_title">工作状态</string>
    <string name="mian_title">市电输入</string>
    <string name="byp_title">旁路输入</string>

</resources>