<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jizhongqi.ConterMainActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center" >

        <LinearLayout
            android:id="@+id/conter_ll"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                style="@style/size25"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:text="@string/host_number"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/conter_et"
                style="@style/size20"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/concentr_et"
                android:textColor="#000000" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/conter_l2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/conter_ll"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                style="@style/size25"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:text="@string/salve_number"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/num_et"
                style="@style/size20"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/concentr_ets"
                android:textColor="#000000" >
            </EditText>
        </LinearLayout>

        <Button
            android:id="@+id/conter_bt_confirm"
            style="@style/size25"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/conter_l2"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btselector"
            android:text="@string/confirm"
            android:textColor="#000000" />
    </RelativeLayout>

</RelativeLayout>